--- a/Exercicios/EX018/fundo006.html
+++ b/Exercicios/EX018/fundo006.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 </head>
 <style>
     body{
         height: 100vh;
         background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
-        background-position: center center;
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
     }
     main{
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -28,7 +29,13 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure porro assumenda expedita, odio numquam facere dolorum quaerat dolore, animi dignissimos dicta vero iste impedit culpa. Dolorum quod qui quaerat vel</p>
     </main>
     
 </body>
